# sofia-sip-sys

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  build.rs  wrapper.h
examples/: message.rs
src/: error.rs  lib.rs  nua.rs  sip.rs  su.rs  sys.rs  tag.rs
src/nua/: builder.rs  event.rs  handle.rs  mod.rs  nua.rs  nua_tests.rs
src/tag/: builder.rs  mod.rs  tag.rs
tests/: test_sip_invite.rs  test_sip_message.rs
