[package]
authors = ["Iuri Diniz <iuridiniz@gmail.com>"]
build = "build.rs"
description = "Rust bindings for sofia-sip"
edition = "2018"
license = "LGPL-2.1-or-later or MIT"
license-file = "LICENSE"
links = "sofia-sip-ua"
name = "sofia-sip"
repository = "https://github.com/iuridiniz/sofia-sip-sys/"
version = "0.0.1"

[build-dependencies]
bindgen = "0.58.1"
metadeps = "1.1.2"
pkg-config = "0.3.19"

[package.metadata.pkg-config]
"sofia-sip-ua" = "1.12"

[dependencies]
errno = "0.2.7"
optargs = "0.1.2"
