[package]
authors = ["Iuri Diniz <iuridiniz@gmail.com>"]
build = "build.rs"
description = "Rust bindings for sofia-sip"
edition = "2018"
# the bindings are MIT, but sofia-sip-sys is LGPL-2.1-or-later.
license = "MIT"
keywords = ["sip", "voip", "sofia"]
links = "sofia-sip-ua"
name = "sofia-sip"
repository = "https://github.com/iuridiniz/sofia-sip-sys/"
version = "0.0.2"

[build-dependencies]
bindgen = "0.58.1"
metadeps = "1.1.2"
pkg-config = "0.3.19"

[package.metadata.pkg-config]
"sofia-sip-ua" = "1.12"

[dependencies]
errno = "0.2.7"
optargs = "0.1.2"

[dev-dependencies]
serial_test = "0.5.1"

[profile.test]
# panic = 'abort'
