[package]
authors = ["Iuri Diniz <iuridiniz@gmail.com>"]
build = "build.rs"
description = "Rust bindings for sofia-sip"
edition = "2018"
homepage = "https://github.com/iuridiniz/sofia-sip-sys/"
keywords = ["sip", "voip", "sofia"]
# the bindings are MIT, but sofia-sip-sys is LGPL-2.1-or-later.
license = "MIT"
links = "sofia-sip-ua"
name = "sofia-sip"
repository = "https://github.com/iuridiniz/sofia-sip-sys/"
version = "0.1.0"

[build-dependencies]
bindgen = "0.58.1"
metadeps = "1.1.2"
pkg-config = "0.3.19"

[package.metadata.pkg-config]
"sofia-sip-ua" = "1.12"

[dependencies]
errno = "0.2.7"

[dev-dependencies]
adorn = "0.4.0"
serial_test = "0.5.1"

[profile.test]
# panic = 'abort'
